<?xml version="1.0"?>
<package format="3">
  <name>servo_controller</name>
  <version>0.1.0</version>
  <description>ROS2 Humble package to control 16-channel Servo Driver HAT (PCA9685)</description>
  <maintainer email="gerald.rocher@univ-cotedazur.fr">Gerald Rocher</maintainer>
  <license>MIT</license>

  <buildtool_depend>setuptools</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend> 
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
      <build_type>ament_python</build_type>
  </export>
</package>

